News UAT/force-app/main/default/objects/Action_Task__c/Action_Task__c.object-meta.xml
<CustomObject>
    <description>2015-07 NewsXtend</description>
    <label>Action Task</label>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Action Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>