News UAT/force-app/main/default/objects/Action_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>2015-08-28 NewsXtend Phase 2</description>
    <formula>IF(Action_Plan__r.Opportunity__r.Account.IsPersonAccount, 
    Action_Plan__r.Opportunity__r.Account.FirstName &amp; &quot; &quot; &amp; Action_Plan__r.Opportunity__r.Account.LastName, 
    Action_Plan__r.Opportunity__r.Account.Name)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>