News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_Created_By_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Created_By_First_Name__c</fullName>
    <formula>Action_Plan__r.CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: Created By First Name</label>
    <type>Text</type>
</CustomField>