News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_Created_by_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Created_by_Last_Name__c</fullName>
    <formula>Action_Plan__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: Created by Last Name</label>
    <type>Text</type>
</CustomField>