News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Customer_Type__c</fullName>
    <formula>TEXT(Action_Plan__r.Customer_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: Customer Type</label>
    <type>Text</type>
</CustomField>