News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_Go_Dead_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Go_Dead_Date__c</fullName>
    <formula>Action_Plan__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: Go Dead Date</label>
    <type>Date</type>
</CustomField>