News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Go_Live_Date__c</fullName>
    <formula>Action_Plan__r.Go_Live_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: Go Live Date</label>
    <type>Date</type>
</CustomField>