News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_Period__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_Period__c</fullName>
    <formula>TEXT(Action_Plan__r.Action_Plan_Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: Period</label>
    <type>Text</type>
</CustomField>