News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Plan_State__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan_State__c</fullName>
    <formula>TEXT(Action_Plan__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Plan: State</label>
    <type>Text</type>
</CustomField>