News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Task_Group__c.field-meta.xml
<CustomField>
    <fullName>Action_Task_Group__c</fullName>
    <description>Outbound change sets expire six months after upload, at which time the change set is permanently deleted.</description>
    <label>Action Task Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campaign Management</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>