News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Task_Name__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Action Task Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>