News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Action_Task_Status__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Action Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>