News UAT/force-app/main/default/objects/Action_Task__c/fields/Action_Task_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Action_Task_Sub_Group__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Action Task Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Setup Task</fullName>
            </value>
            <value>
                <fullName>Month-Month Task</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>