News UAT/force-app/main/default/objects/Action_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>