News UAT/force-app/main/default/objects/Action_Task__c/fields/Due_Date_SLA__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_SLA__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Due Date SLA</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>