News UAT/force-app/main/default/objects/Action_Task__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>2015-07 NewsXtend</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>