News UAT/force-app/main/default/objects/Action_Task__c/fields/First_Task__c.field-meta.xml
<CustomField>
    <fullName>First_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2015-07 NewsXtend</description>
    <label>First Task</label>
    <referenceTo>Action_Task__c</referenceTo>
    <relationshipLabel>Action Tasks</relationshipLabel>
    <relationshipName>Action_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>