News UAT/force-app/main/default/objects/Action_Task__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>