News UAT/force-app/main/default/objects/Action_Task__c/fields/Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Number of Tasks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>