News UAT/force-app/main/default/objects/Action_Task__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>2015-08-28 NewsXtend Phase 2</description>
    <formula>Action_Plan__r.Opportunity__r.Name</formula>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>