News UAT/force-app/main/default/objects/Action_Task__c/fields/Opportunity_URL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_URL__c</fullName>
    <description>2015-08-28 NewsXtend Phase 2</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; Action_Plan__r.Opportunity__c, Action_Plan__r.Opportunity__r.Name)</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>