News UAT/force-app/main/default/objects/Action_Task__c/fields/Previous_Task__c.field-meta.xml
<CustomField>
    <fullName>Previous_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For NewsXtend. Used to contain the previous Action Task based on the Step Number Field. Used mainly within the NewsXtend_ActionPlan controller.</description>
    <label>Previous Task</label>
    <referenceTo>Action_Task__c</referenceTo>
    <relationshipLabel>Action Tasks (Previous Tasks)</relationshipLabel>
    <relationshipName>Previous_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>