News UAT/force-app/main/default/objects/Action_Task__c/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Step Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>