News UAT/force-app/main/default/objects/Action_Task__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>