News UAT/force-app/main/default/objects/Action_Task__c/fields/Target_Month__c.field-meta.xml
<CustomField>
    <fullName>Target_Month__c</fullName>
    <description>2015-07 NewsXtend</description>
    <formula>RIGHT(&quot;0&quot; &amp; TEXT(MONTH(Target_Date__c)),2) &amp; &quot; / &quot; &amp; RIGHT(TEXT(YEAR(Target_Date__c)),4)</formula>
    <inlineHelpText>Target Month (MM/yyyy)</inlineHelpText>
    <label>Target Month</label>
    <type>Text</type>
</CustomField>