News UAT/force-app/main/default/objects/Action_Task__c/fields/Task_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Completed_Date__c</fullName>
    <description>2015-07 NewsXtend</description>
    <label>Task Completed Date</label>
    <type>Date</type>
</CustomField>