News UAT/force-app/main/default/objects/Action_Task__c/recordTypes/Admin_Data.recordType-meta.xml
<RecordType>
    <fullName>Admin_Data</fullName>
    <active>true</active>
    <description>Default data that is used to generate &quot;General Data&quot; through &quot;Create Action Task Wizard&quot;</description>
    <label>Admin Data</label>
</RecordType>