News UAT/force-app/main/default/objects/Action_Task__c/recordTypes/General_Data.recordType-meta.xml
<RecordType>
    <fullName>General_Data</fullName>
    <active>true</active>
    <description>This is transactional Action Task that always links to an Action Plan.</description>
    <label>General Data</label>
</RecordType>