News UAT/force-app/main/default/objects/Action_Task__c/listViews/My_Action_Tasks.listView-meta.xml
<ListView>
    <fullName>My_Action_Tasks</fullName>
    <columns>Account_URL__c</columns>
    <columns>Opportunity_URL__c</columns>
    <columns>NAME</columns>
    <columns>Action_Plan_Created_By_First_Name__c</columns>
    <columns>Action_Plan_Created_by_Last_Name__c</columns>
    <columns>Action_Task_Group__c</columns>
    <columns>Action_Task_Sub_Group__c</columns>
    <columns>Action_Plan_State__c</columns>
    <columns>Action_Plan_Start_Date__c</columns>
    <columns>Action_Plan_Go_Live_Date__c</columns>
    <columns>Action_Plan_Go_Dead_Date__c</columns>
    <columns>Action_Plan_Customer_Type__c</columns>
    <columns>Action_Plan_Status__c</columns>
    <columns>Action_Plan_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Action Tasks</label>
</ListView>