News UAT/force-app/main/default/objects/Action_Task__c/listViews/News_Xtend_Social_Main_Queue.listView-meta.xml
<ListView>
    <fullName>News_Xtend_Social_Main_Queue</fullName>
    <columns>Account_URL__c</columns>
    <columns>Action_Plan__c</columns>
    <columns>Action_Plan_Start_Date__c</columns>
    <columns>Action_Plan_Go_Live_Date__c</columns>
    <columns>NAME</columns>
    <columns>Action_Task_Name__c</columns>
    <columns>Action_Task_Group__c</columns>
    <columns>Action_Task_Sub_Group__c</columns>
    <columns>Target_Month__c</columns>
    <columns>Action_Task_Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Action_Plan_Period__c</columns>
    <columns>Action_Plan_Go_Dead_Date__c</columns>
    <columns>Opportunity_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Task_Group__c</field>
        <operation>equals</operation>
        <value>Social</value>
    </filters>
    <filters>
        <field>Action_Task_Sub_Group__c</field>
        <operation>equals</operation>
        <value>Setup Task,Month-Month Task</value>
    </filters>
    <filters>
        <field>Action_Task_Status__c</field>
        <operation>equals</operation>
        <value>Not Started,In Progress</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Action_Task__c.Admin_Data</value>
    </filters>
    <label>News Xtend Social Main Queue</label>
</ListView>